--- a/USMagento/test-output/old/Suite/classes.html
+++ b/USMagento/test-output/old/Suite/classes.html
@@ -11,7 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validUserProductPurchase</td>
+<td>maxCartCount</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
