--- a/USMagento/test-output/old/Suite/reporter-output.html
+++ b/USMagento/test-output/old/Suite/reporter-output.html
@@ -1,7 +1,7 @@
-<h2>Reporter output</h2><table><tr><td>suite is executed Wed May 06 16:36:14 IST 2020</td></tr>
+<h2>Reporter output</h2><table><tr><td>suite is executed Thu May 07 20:07:26 IST 2020</td></tr>
 <tr><td>chrome Launched</td></tr>
 <tr><td>https://magento-uat:jkvdlkn%NJ10@us-uat-magento.compunnel.com/ url is navigated</td></tr>
-<tr><td>validUserProductPurchase script execustion startsWed May 06 16:36:39 IST 2020</td></tr>
-<tr><td>validUserProductPurchase script is passed</td></tr>
+<tr><td>maxCartCount script execustion startsThu May 07 20:08:11 IST 2020</td></tr>
+<tr><td>maxCartCount script is failed</td></tr>
 <tr><td>browser closed</td></tr>
 </table>
