--- a/USMagento/test-output/emailable-report.html
+++ b/USMagento/test-output/emailable-report.html
@@ -9,17 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">102,142</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">102,015</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Script.UserProductPurchase</td><td><a href="#m0">maxCartCount</a></td><td rowspan="1">1588862291119</td><td rowspan="1">56124</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Script.UserProductPurchase</td><td><a href="#m0">validUserProductPurchase</a></td><td rowspan="1">1589198176706</td><td rowspan="1">53882</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">Script.UserProductPurchase#maxCartCount</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">maxCartCount script execustion startsThu May 07 20:08:11 IST 2020<br/>maxCartCount script is failed</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [10] but found [18]
-	at feature.taskfeature.CartCount(taskfeature.java:236)
-	at Script.UserProductPurchase.maxCartCount(UserProductPurchase.java:30)
-	at java.util.concurrent.FutureTask.run(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
-	at java.lang.Thread.run(Unknown Source)
-... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">Script.UserProductPurchase#validUserProductPurchase</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">validUserProductPurchase script execustion startsMon May 11 17:26:16 IST 2020<br/>validUserProductPurchase script is passed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
