My Account Page add, edit and Delete Address

--- a/USMagento/test-output/old/Suite/reporter-output.html
+++ b/USMagento/test-output/old/Suite/reporter-output.html
@@ -1,7 +1,13 @@
-<h2>Reporter output</h2><table><tr><td>suite is executed Thu May 07 20:07:26 IST 2020</td></tr>
+<h2>Reporter output</h2><table><tr><td>suite is executed Wed May 13 13:00:41 IST 2020</td></tr>
 <tr><td>chrome Launched</td></tr>
 <tr><td>https://magento-uat:jkvdlkn%NJ10@us-uat-magento.compunnel.com/ url is navigated</td></tr>
-<tr><td>maxCartCount script execustion startsThu May 07 20:08:11 IST 2020</td></tr>
-<tr><td>maxCartCount script is failed</td></tr>
-<tr><td>browser closed</td></tr>
+<tr><td>validLogin script execustion startsWed May 13 13:00:52 IST 2020</td></tr>
+<tr><td>validLogin script is failed</td></tr>
+<tr><td>validLogin script is failed</td></tr>
+<tr><td>suite execution end :Wed May 13 13:00:56 IST 2020</td></tr>
+<tr><td>total suite execution time 0mins</td></tr>
+<tr><td>total scrpt executed 1</td></tr>
+<tr><td>total script passed 0</td></tr>
+<tr><td>total scrpt failed 2</td></tr>
+<tr><td>total scrpt skipped 0</td></tr>
 </table>
