--- a/USMagento/test-output/old/Suite/methods-alphabetical.html
+++ b/USMagento/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69b199">  <td>20/05/07 20:08:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserProductPurchase.maxCartCount()[pri:3, instance:Script.UserProductPurchase@3bfdc050]">maxCartCount</td> 
-  <td>TestNG-tests-1@1404538477</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>20/05/07 20:09:07</td>   <td>56475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseLib.postcondition()[pri:0, instance:Script.UserProductPurchase@3bfdc050]">&lt;&lt;postcondition</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1404538477</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>20/05/07 20:07:26</td>   <td>-44709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseLib.precondition(java.lang.String, java.lang.String)[pri:0, instance:Script.UserProductPurchase@3bfdc050]">&gt;&gt;precondition</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1404538477</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>20/05/13 13:00:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseLib.precondition(java.lang.String, java.lang.String)[pri:0, instance:Script.Loginscript@6a41eaa2]">&gt;&gt;precondition</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@520696743</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>20/05/13 13:00:52</td>   <td>10964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginscript.validLogin()[pri:1, instance:Script.Loginscript@6a41eaa2]">validLogin</td> 
+  <td>TestNG-tests-1@520696743</td>   <td></td> </tr>
 </table>
