--- a/USMagento/test-output/emailable-report.html
+++ b/USMagento/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">73,718</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">49,457</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Script.CheckFilter</td><td><a href="#m0">FilterCheck</a></td><td rowspan="1">1589359774569</td><td rowspan="1">50820</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Script.AddAdress</td><td><a href="#m0">wishList</a></td><td rowspan="1">1589379676071</td><td rowspan="1">25617</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">Script.CheckFilter#FilterCheck</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">FilterCheck script execustion startsWed May 13 14:19:34 IST 2020<br/>FilterCheck script is passed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">Script.AddAdress#wishList</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">wishList script execustion startsWed May 13 19:51:16 IST 2020<br/>wishList script is passed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
