--- a/USMagento/test-output/index.html
+++ b/USMagento/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>F:\MagentoAutomation\USM2\USMagento\CheckFilter.xml</span>
+                    <span>F:\MagentoAutomation\USM2\USMagento\Address.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Script.CheckFilter" hash-for-method="FilterCheck">FilterCheck</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Script.AddAdress" hash-for-method="wishList">wishList</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Script.CheckFilter</span>
+              <span class="class-name">Script.AddAdress</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="FilterCheck">
-                  </a> <!-- FilterCheck -->
-                  <span class="method-name">FilterCheck</span>
+                  <a name="wishList">
+                  </a> <!-- wishList -->
+                  <span class="method-name">wishList</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">F:\MagentoAutomation\USM2\USMagento\CheckFilter.xml</span>
+            <span class="header-content">F:\MagentoAutomation\USM2\USMagento\Address.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -150,7 +150,7 @@
     &lt;parameter name=&quot;baseurl&quot; value=&quot;https://magento-uat:jkvdlkn%NJ10@us-uat-magento.compunnel.com/&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Script.CheckFilter&quot;/&gt;
+      &lt;class name=&quot;Script.AddAdress&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'FilterCheck')
-data.setCell(0, 2, 'Script.CheckFilter')
-data.setCell(0, 3, 50820);
+data.setCell(0, 1, 'wishList')
+data.setCell(0, 2, 'Script.AddAdress')
+data.setCell(0, 3, 25617);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 50 seconds</span>
+              <span class="suite-total-time">Total running time: 25 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -211,10 +211,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">FilterCheck</span>
+              <span class="reporter-method-name">wishList</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">FilterCheck script execustion startsWed May 13 14:19:34 IST 2020</span>
-                <span class="reporter-method-output">FilterCheck script is passed</span>
+                <span class="reporter-method-output">wishList script execustion startsWed May 13 19:51:16 IST 2020</span>
+                <span class="reporter-method-output">wishList script is passed</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -232,18 +232,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Script.CheckFilter</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Script.AddAdress</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">precondition(chrome, https://magento-uat:jkvdlkn%NJ10@us-uat-magento.compunnel.com/)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">FilterCheck</span>
-                <span class="method-start">21715 ms</span>
+                <span class="method-name">wishList</span>
+                <span class="method-start">22890 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">postcondition</span>
-                <span class="method-start">72540 ms</span>
+                <span class="method-start">48510 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
