--- a/USMagento/test-output/old/Default suite/methods-alphabetical.html
+++ b/USMagento/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c8e6b">  <td>20/05/06 15:25:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserProductPurchase.validEBookPurchaseUser()[pri:3, instance:Script.UserProductPurchase@143640d5]">validEBookPurchaseUser</td> 
-  <td>main@1571967156</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>20/05/13 18:53:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddAdress.EAlertSubscription()[pri:1, instance:Script.AddAdress@91161c7]">EAlertSubscription</td> 
+  <td>main@1847509784</td>   <td></td> </tr>
 </table>
