--- a/USMagento/test-output/old/Suite/methods.html
+++ b/USMagento/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c87b81">  <td>20/05/13 14:19:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseLib.precondition(java.lang.String, java.lang.String)[pri:0, instance:Script.CheckFilter@6a41eaa2]">&gt;&gt;precondition</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@333545139</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>20/05/13 14:19:34</td>   <td>21708</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckFilter.FilterCheck()[pri:0, instance:Script.CheckFilter@6a41eaa2]">FilterCheck</td> 
-  <td>TestNG-tests-1@333545139</td>   <td></td> </tr>
-<tr bgcolor="c87b81">  <td>20/05/13 14:20:25</td>   <td>72533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseLib.postcondition()[pri:0, instance:Script.CheckFilter@6a41eaa2]">&lt;&lt;postcondition</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@333545139</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>20/05/13 19:50:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseLib.precondition(java.lang.String, java.lang.String)[pri:0, instance:Script.AddAdress@6a41eaa2]">&gt;&gt;precondition</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@2005852764</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>20/05/13 19:51:16</td>   <td>22890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddAdress.wishList()[pri:1, instance:Script.AddAdress@6a41eaa2]">wishList</td> 
+  <td>TestNG-tests-1@2005852764</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>20/05/13 19:51:41</td>   <td>48510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseLib.postcondition()[pri:0, instance:Script.AddAdress@6a41eaa2]">&lt;&lt;postcondition</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@2005852764</td>   <td></td> </tr>
 </table>
