--- a/USMagento/test-output/old/Suite/reporter-output.html
+++ b/USMagento/test-output/old/Suite/reporter-output.html
@@ -1,7 +1,7 @@
-<h2>Reporter output</h2><table><tr><td>suite is executed Wed May 13 14:19:12 IST 2020</td></tr>
+<h2>Reporter output</h2><table><tr><td>suite is executed Wed May 13 19:50:53 IST 2020</td></tr>
 <tr><td>chrome Launched</td></tr>
 <tr><td>https://magento-uat:jkvdlkn%NJ10@us-uat-magento.compunnel.com/ url is navigated</td></tr>
-<tr><td>FilterCheck script execustion startsWed May 13 14:19:34 IST 2020</td></tr>
-<tr><td>FilterCheck script is passed</td></tr>
+<tr><td>wishList script execustion startsWed May 13 19:51:16 IST 2020</td></tr>
+<tr><td>wishList script is passed</td></tr>
 <tr><td>browser closed</td></tr>
 </table>
