--- a/USMagento/test-output/index.html
+++ b/USMagento/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>F:\MagentoAutomation\USM2\USMagento\SuccessPage.xml</span>
+                    <span>D:\INFOLearning\USM20REPO\USM2\USMagento\CustomSearch.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Script.SuccessPageTest" hash-for-method="myOrderValdation">myOrderValdation</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Script.Search_Product" hash-for-method="SearchTestBytitle">SearchTestBytitle</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Script.SuccessPageTest</span>
+              <span class="class-name">Script.Search_Product</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="myOrderValdation">
-                  </a> <!-- myOrderValdation -->
-                  <span class="method-name">myOrderValdation</span>
+                  <a name="SearchTestBytitle">
+                  </a> <!-- SearchTestBytitle -->
+                  <span class="method-name">SearchTestBytitle</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">F:\MagentoAutomation\USM2\USMagento\SuccessPage.xml</span>
+            <span class="header-content">D:\INFOLearning\USM20REPO\USM2\USMagento\CustomSearch.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -150,7 +150,7 @@
     &lt;parameter name=&quot;baseurl&quot; value=&quot;https://magento-uat:jkvdlkn%NJ10@us-uat-magento.compunnel.com/&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Script.SuccessPageTest&quot;/&gt;
+      &lt;class name=&quot;Script.Search_Product&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'myOrderValdation')
-data.setCell(0, 2, 'Script.SuccessPageTest')
-data.setCell(0, 3, 135429);
+data.setCell(0, 1, 'SearchTestBytitle')
+data.setCell(0, 2, 'Script.Search_Product')
+data.setCell(0, 3, 49276);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 49 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -211,10 +211,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">myOrderValdation</span>
+              <span class="reporter-method-name">SearchTestBytitle</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">myOrderValdation script execustion startsTue May 19 19:23:28 IST 2020</span>
-                <span class="reporter-method-output">myOrderValdation script is passed</span>
+                <span class="reporter-method-output">SearchTestBytitle script execustion startsThu May 21 19:48:20 IST 2020</span>
+                <span class="reporter-method-output">SearchTestBytitle script is passed</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -232,18 +232,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Script.SuccessPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Script.Search_Product</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">precondition(chrome, https://magento-uat:jkvdlkn%NJ10@us-uat-magento.compunnel.com/)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">myOrderValdation</span>
-                <span class="method-start">24027 ms</span>
+                <span class="method-name">SearchTestBytitle</span>
+                <span class="method-start">20569 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">postcondition</span>
-                <span class="method-start">159459 ms</span>
+                <span class="method-start">69847 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
