--- a/USMagento/test-output/old/Suite/reporter-output.html
+++ b/USMagento/test-output/old/Suite/reporter-output.html
@@ -1,7 +1,7 @@
-<h2>Reporter output</h2><table><tr><td>suite is executed Tue May 19 19:23:04 IST 2020</td></tr>
+<h2>Reporter output</h2><table><tr><td>suite is executed Thu May 21 19:47:59 IST 2020</td></tr>
 <tr><td>chrome Launched</td></tr>
 <tr><td>https://magento-uat:jkvdlkn%NJ10@us-uat-magento.compunnel.com/ url is navigated</td></tr>
-<tr><td>myOrderValdation script execustion startsTue May 19 19:23:28 IST 2020</td></tr>
-<tr><td>myOrderValdation script is passed</td></tr>
+<tr><td>SearchTestBytitle script execustion startsThu May 21 19:48:20 IST 2020</td></tr>
+<tr><td>SearchTestBytitle script is passed</td></tr>
 <tr><td>browser closed</td></tr>
 </table>
